Add uplaod image on update route
